# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.323 2012/05/08 18:38:54 grobian Exp $

  08 May 2012; Fabian Groffen <grobian@gentoo.org> sun-jdk-1.6.0.32.ebuild:
  Fix unpack on Solaris, rekeyword, bug #414795

*sun-jdk-1.6.0.32 (05 May 2012)

  05 May 2012; Ralph Sennhauser <sera@gentoo.org> +sun-jdk-1.6.0.32.ebuild:
  Version bump. #414775
  Drop ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris due to
  upstream repackaging.

  05 May 2012; Ralph Sennhauser <sera@gentoo.org> -sun-jdk-1.6.0.29.ebuild:
  Remove vulnarable. #404071

  05 May 2012; Ralph Sennhauser <sera@gentoo.org> sun-jdk-1.6.0.31.ebuild:
  Add workaround for large memory on x86. #405239
  Add QA_FLAGS_IGNORED. #405639

  18 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sun-jdk-1.6.0.31.ebuild:
  x86 stable wrt bug #404071

  17 Feb 2012; Agostino Sarubbo <ago@gentoo.org> sun-jdk-1.6.0.31.ebuild:
  Stable for amd64, wrt bug #404071

*sun-jdk-1.6.0.31 (16 Feb 2012)

  16 Feb 2012; Ralph Sennhauser <sera@gentoo.org> -sun-jdk-1.6.0.29-r1.ebuild,
  -sun-jdk-1.6.0.30.ebuild, +sun-jdk-1.6.0.31.ebuild, metadata.xml:
  Security bump. #404071
  Use relative path for desktop file icon. #403139
  Make installation of src.zip optional as for other JDKs.
  dev-java/sun-jce-bin is build only dependency.
  Add ia64 tarball. Don't file keyword requests just yet. Might disapear again,
  not (yet?) available for java 7.
  Remove vulnerable, except current stable.

*sun-jdk-1.6.0.30 (20 Jan 2012)

  20 Jan 2012; Ralph Sennhauser <sera@gentoo.org> +sun-jdk-1.6.0.30.ebuild:
  Version bump. #399425
  Replace use flag kernel_Solaris with the correct kernel_SunOS.

  16 Dec 2011; Ralph Sennhauser <sera@gentoo.org> sun-jdk-1.6.0.29-r1.ebuild,
  metadata.xml:
  Add missing kernel_Solaris to IUSE.
