@@ -24,14 +24,33 @@ DIST jdk-6u32-solaris-sparcv9-demos.tar.Z 67919 RMD160 6206dd3766bb7dd566e5c4e4d
 DIST jdk-6u32-solaris-sparcv9.sh 12774004 RMD160 b2d2fdf06b1212c90d6dc23e1389ed2548fd0558 SHA1 9aef83dae8360c75848762b6c76ddf823f2600f3 SHA256 23a049e3c716309b5c1aa6bc1e96b6503f501a47250a7d1c45a02cbbc80b9fab
 DIST jdk-6u32-solaris-x64-demos.tar.Z 72693 RMD160 11814c204170c7df0d453d76e8d6730a4b27066f SHA1 48655684d76528f227d12516381154feb733bc13 SHA256 b139ac8b8a03d6e7652b11643883ce69fe365c61d3e9fa3c06d4ca9a003aa35b
 DIST jdk-6u32-solaris-x64.sh 8846042 RMD160 1a59a0537b17a1a2e145c48b832cc5500a2a8e2e SHA1 a55f94a26619228b6dadb6c25eb8c5fff29ffcfb SHA256 10f13c08e0571472dc0fb99ec10314c0083ae675ce6bc041c7a5a653d63522f0
+DIST jdk-6u33-linux-i586-demos.tar.gz 12074428 RMD160 55bb28c16290b558f237fee34ad47cf7e89a8a58 SHA1 286fedbb0ee78349596d62d3b853beada88ed7bf SHA256 5b3b4e8f005c6d1339fe4f692080246ba2a4ff90a89dd985679ad5b364bd48bc
+DIST jdk-6u33-linux-i586.bin 71748499 RMD160 d52ca094683408acc6f62ee1770ce07ed9cfe7d4 SHA1 a525dd379f577d34628b89beb3ba7c1c935c9f94 SHA256 2acb931d0cb455dbae3f6b11d394dd7e5758e6499abc1a7c50909e72cfb67fa7
+DIST jdk-6u33-linux-ia64-demos.tar.gz 6858807 RMD160 4fdcfae3c6468fa6a7d8fbd2ad2a6d013f993166 SHA1 93d79254f1e9d09bb28c7c9c11f8ab85fe7a2925 SHA256 8e51d3f9be6c0b9921f9534bc20fe25b023281fce8d2ecd9310c12bb3e72e55c
+DIST jdk-6u33-linux-ia64.bin 63591748 RMD160 832bac3e17ad0f2828de39928da62fa653871d4b SHA1 d02f009726add52944acc342820e059b3bf152bb SHA256 020a5ca1c666e7a57c6ab5bad4d1f42657a9b2d7478665f8933aa5b1f0e0c4f7
+DIST jdk-6u33-linux-x64-demos.tar.gz 12134002 RMD160 93295cd78a3d35953833c968699b88e7c92ee6fd SHA1 79c6e6a918d7f6f690da90724c77563d3d9418f6 SHA256 056a59c944d1e1e1eb7b0be90e48d591cd4d2ddf165e376519dccdbd70547a3a
+DIST jdk-6u33-linux-x64.bin 72029591 RMD160 58fe852835e11743b1c2389c741deead87401cf8 SHA1 eee126305d836533894be41cc5eb1eca7cdf5831 SHA256 978daf43e7fc302220174a16aecaf54d5e9b72f1cd1681f36ab14a2b4bad5fd4
+DIST jdk-6u33-solaris-i586-demos.tar.Z 17950479 RMD160 f904f4f8f858dbff3d8e866b917befa95feebc14 SHA1 ddb34dd9e3043306d24128005927dfa13fa448c4 SHA256 4d77b49413054a9ed1755bfb229ab50b21301d9fc50f0a30dcddf5b6fcf0c420
+DIST jdk-6u33-solaris-i586.sh 71648957 RMD160 84f72539e29603f1786bb5f8a054480228dced0a SHA1 814b78349dfb8fd9c312272304fa9e984be4b2a8 SHA256 9b7a0f2ff0b269086c51d316b36cb85b106bf1f259c56defe58ce9fbf327826c
+DIST jdk-6u33-solaris-sparc-demos.tar.Z 17943081 RMD160 15571478f19009a6ccde0a241ef522148e67750d SHA1 d1a7a19725ee6a41c055ad4f905cff604269d226 SHA256 92e39fc49ace8d4b9f7babfad33e3a4f1cabc79145ff01964007a5d69823cb63
+DIST jdk-6u33-solaris-sparc.sh 76857363 RMD160 a381d06f9c21a8922a1845b6f49a4ef58e96449d SHA1 025dbfe3bd989253cf9d3f4dfed2bbbd5061b7e0 SHA256 c76e8e40d34e4d4aed00ca1ee202c89e3545782f1785956ebaf22a12ad768622
+DIST jdk-6u33-solaris-sparcv9-demos.tar.Z 66663 RMD160 d4c3a95c1ea84473d2553ada9cc6f16d77b67073 SHA1 6ca86c48a694ca04db2caa84536b12cb7f0301d1 SHA256 4f5f702c16cdfb35be00fed90a8d93299b7e10bc125c0f4b74fa47ee71ddb98f
+DIST jdk-6u33-solaris-sparcv9.sh 12775348 RMD160 77437a24f7f21095a3735f2fabcc379557f2cc7f SHA1 32926ee2c1bc0dd3e1878c2ba0aeed366d3d365a SHA256 fa42d6974d88c0c69fa827c1106c577f95687f19004bcca541db32ae19f9d1c5
+DIST jdk-6u33-solaris-x64-demos.tar.Z 71875 RMD160 ff23afdc2352c70abfaff0eaec14401c32e56042 SHA1 e0d8e0d275f0db95b4be70081ab839fb10a7ad97 SHA256 6712cbf1d8067e32bd430c74bbbb958ce91d21fc16d7147ec890a967b932c357
+DIST jdk-6u33-solaris-x64.sh 8847662 RMD160 391a92773eab6a4ca78125a276b6a1bb12185b36 SHA1 8aa6a3777af2dbcef396e575d96664fff600ebd4 SHA256 07e23931631c68120dd3c17d857982a1547937cc096f5f9d372029442ad5656c
 EBUILD sun-jdk-1.6.0.31.ebuild 9582 RMD160 37c5e182f31913f97e0863160e682c94eb4d9774 SHA1 c0a2b72135fec3fc7cd3473315b104e34b221550 SHA256 91985d25d2d9aedf385af30a95ae376ef3c6f1363ffbaa1e3c7cb7989688a070
 EBUILD sun-jdk-1.6.0.32.ebuild 11650 RMD160 941edc2fca80b92516fc35df8ff53d2592ce58f9 SHA1 e340fa40b625ef97252551b95952b532441c4a3d SHA256 99074dbe6750488c313029c6959e2b6d71fad711dbb3a2d47446f071a4e91341
-MISC ChangeLog 59478 RMD160 54e11661a466a4febb61cfd70bbe82f11603de72 SHA1 69a18ae220ac7dda60faa6eb7940b0f322a9bf62 SHA256 c9b7e190af24b28451db2f01808e4ec8b854dbc6a9bea37f90090c4ad34114d5
+EBUILD sun-jdk-1.6.0.33.ebuild 11623 RMD160 eee4c801d149b7865fec43cf7b506ab5d7807bb9 SHA1 48ebedf4f05cf60164d7810d4e95a608136cbcf0 SHA256 a5bd6188a7ebca87264bc6f947ef272fa8b21be2d2f9ffb268b6f4876490f630
+MISC ChangeLog 59630 RMD160 9d19a75b73eab3ee0ea754efa58e8a28b4de41c7 SHA1 771d7af7642224883880352a5d7da7cec66ebafc SHA256 aeb617181f8a89f6f25cafbd7aee5896624cb28b8872100d16c9ef72e9ef0e12
 MISC metadata.xml 429 RMD160 e6edae84d0d56c48e9d6e631d1f0612535f26f2d SHA1 4b6faf61f3869bbbccc405c7c07932dd630737ea SHA256 2fef8162216b2e78806cdc6ba5b0ff2619a482aa3ce0ecf909ffa17ba309428c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (SunOS)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk+paEUACgkQX3X2B8XHTokbsgCfYAZ7Wqz7wAicX8lA3+piALEh
-1vAAn2hwlurFaA++J93+2/rkRinSVZ1F
-=/23F
+iQEcBAEBAgAGBQJP2ao5AAoJEIUJ+svaV163tnIH+wVNeqqIWAxPat3AR0YEdfd1
+2w2YK4Gn9wSFhj4ruyKDF1TcYdQkVA4+RArODoDJmlrAhn+9F6mTj5BOEReZJxoE
+wXu68NXdpXoxhpmEL3jD5RMQ2BfXN6SOTqTYkrJP/NxMhGvolu088xihDyyvvcOY
+iAOzIQxC5BWjEAnQFIy8pIomo3AKQu6pxwXubRKA+27rYp2FENZAFG0BXTN7NLgU
+N/R5+omxknSmfpH7ippm/nNcoKvt8bLQ/IHVr3G6w7WfawUfv90tZXvEYw4myZIR
+rzLe8PqoQVF/86KlbrWT9cqMXPZJhxDHDtI8rmZ8wyWz12CblU+OCMZ26/DI48E=
+=HWZL
 -----END PGP SIGNATURE-----
