@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.323 2012/05/08 18:38:54 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.324 2012/06/14 09:09:00 sera Exp $
+
+*sun-jdk-1.6.0.33 (14 Jun 2012)
+
+  14 Jun 2012; Ralph Sennhauser <sera@gentoo.org> +sun-jdk-1.6.0.33.ebuild:
+  Security bump. #421073
+  Add ia64 support.
 
   08 May 2012; Fabian Groffen <grobian@gentoo.org> sun-jdk-1.6.0.32.ebuild:
   Fix unpack on Solaris, rekeyword, bug #414795
